Form still not working

--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
                           </div>
                         </div>
                       </div>
+                      <input type="hidden" name="_subject" value="Kontakt ze strony www" />
+                      <input type="text" name="_gotcha" style="display:none" />
                       <div class="row">
                         <div class="col-sm-12">
                           <div class="form-group">
